<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Ideas</string>
    <string name="title_dashboard">Capture</string>
    <string name="title_notifications">Settings</string>
    <string name="logo_description">Logo</string>
    <string name="recording_prompt">"What's on your mind?"</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_recording">Recording</string>
    <string name="camera_button_description">Attach photo</string>
    <string name="file_button_description">Attach files</string>
    <string name="record_button_description">Start recording audio ideas or capture text ideas</string>
    <string name="hint_text">What’s on your mind?</string>
    <string name="created">Created:</string>
    <string name="tags">Tags:</string>
    <string name="type">Type:</string>
    <string name="idea_title">Idea Title</string>
    <string name="no_ideas">No ideas yet!</string>
    <string name="duration">"Duration: "</string>
    <string name="delete_item">Delete</string>
    <string name="save_item">Save</string>
    <string name="unsaved_changes">Unsaved changes</string>
    <string name="all_changes_saved">All changes saved!</string>
    <string name="transcript_file_tab">Transcript</string>
    <string name="notes_file_tab">Notes</string>
    <string name="summary_file_tab">Summary</string>
    <string name="file_not_available">%1$s not yet available</string>
    <string name="saving_changes">Saving…</string>
    <string name="detail_note_hint">Any notes about this idea?</string>
    <string name="unsaved_changes_title">Discard changes?</string>
    <string name="unsaved_changes_message">All unsaved changes will be lost. </string>
    <string name="unsaved_changes_positive_dialog">Discard</string>
    <string name="unsaved_changes_negative_dialog">Cancel</string>
    <string name="delete_dialog_title">Delete idea?</string>
    <string name="delete_dialog_message">This idea will be permanently deleted. This cannot be undone. </string>
    <string name="delete_dialog_positive_dialog">Delete</string>
    <string name="delete_dialog_negative_dialog">Cancel</string>
    <string name="start_transcribe_button">Transcribe audio</string>
    <string name="start_summarize_button">Summarize idea</string>
    <string name="transcription_in_progress_message">Transcribing audio …</string>
    <string name="summarization_in_progress_message">Summarizing transcript …</string>
</resources>