<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="8dp"
    android:layout_marginHorizontal="8dp"
    android:background="@drawable/rounded_container"
    android:backgroundTint="?attr/colorSurfaceContainerHighest"
    android:elevation="10dp">

    <TextView
        android:id="@+id/ideaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="?attr/colorOnSurface"
        android:text="@string/idea_title" />

    <TextView
        android:id="@+id/ideaType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnSurface"
        android:text="@string/type" />

    <TextView
        android:id="@+id/ideaDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnSurface"
        android:text="@string/duration" />

    <TextView
        android:id="@+id/ideaTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnSurface"
        android:text="@string/tags" />

    <TextView
        android:id="@+id/ideaDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/colorOnSurface"
        android:text="@string/created" />
</LinearLayout>
