<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:gravity="center"
    tools:context=".ui.dashboard.DashboardFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/title_dashboard" />

    </com.google.android.material.appbar.AppBarLayout>

    <!--Greeting-->
    <TextView
        android:id="@+id/prompt_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_prompt"
        android:textSize="24sp"
        android:padding="8dp"
        android:layout_gravity="center"/>

    <!-- Main Bar -->
    <RelativeLayout
        android:id="@+id/main_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="8dp"
        android:clipChildren="false"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp"
            android:layout_gravity="center_vertical"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:elevation="10dp"
            android:background="@drawable/custom_background">

            <!-- Camera Button -->
            <Button
                style="?attr/materialIconButtonStyle"
                android:id="@+id/cameraButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginEnd="-6dp"
                android:contentDescription="@string/camera_button_description"
                app:icon="@drawable/ic_photo_camera"
                />

            <!-- File Button -->
            <Button
                style="?attr/materialIconButtonStyle"
                android:id="@+id/fileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginEnd="0dp"
                android:contentDescription="@string/file_button_description"
                app:icon="@drawable/ic_folder"
                />

            <!-- Text Input Prompt -->
            <EditText
                android:id="@+id/inputField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/hint_text"
                android:hint="@string/hint_text"
                android:background="@null"
                android:textSize="16sp"
                android:padding="8dp"
                android:inputType="textMultiLine|text"
                android:scrollHorizontally="false"
                android:overScrollMode="never"
                android:gravity="top|start"
                android:layout_gravity="center"
                android:maxLines="8"
                android:imeOptions="actionDone" />

            <!-- Voice Recording Button -->
            <Button
                style="?attr/materialIconButtonFilledTonalStyle"
                android:id="@+id/commit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:contentDescription="@string/record_button_description"
                app:icon="@drawable/ic_mic"
                />
        </LinearLayout>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>